# clutch

./: .gitignore  .typesafe-i18n.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  site-snapshot.txt  svelte.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  (+1 more)
scripts/: build.sh  bump-version.sh  fix-i18n.sh  i18n-add-key.sh  i18n-add-lang.sh  i18n-audit.sh  i18n-validate.sh  sync-version.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_user_profile.sql  003_theme_settings.sql  004_time_settings.sql  005_startup_settings.sql  006_shortcut_settings.sql  007_export_settings.sql  008_model_cache.sql  009_search_index.sql  010_drop_search_index.sql
src-tauri/src/: api.rs  cancel.rs  context.rs  db.rs  export.rs  file_resolver.rs  lib.rs  logs.rs  model_cache.rs  sessions.rs  settings.rs  skills.rs  user_profile.rs  web_fetcher.rs  workspaces.rs
src-tauri/tests/: api_integration.rs  cancel_integration.rs  db_integration.rs  export_integration.rs  file_resolver_fs_integration.rs  file_resolver_integration.rs  logs_integration.rs  model_cache_integration.rs  sessions_integration.rs  settings_integration.rs  skills_db_integration.rs  skills_fs_integration.rs  skills_net_integration.rs  user_profile_integration.rs  workspaces_db_integration.rs  workspaces_fs_integration.rs
src-tauri/tests/common/: mod.rs
static/: site.webmanifest
(+97 files in other folders)
