[package]
name = "clutch"
version = "0.5.0"
description = "Grab the conversation"
authors = ["Clutch"]
license = "AGPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools", "image-png", "image-ico"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "http2"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls-ring-webpki"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
scraper = "0.20"
html2md = "0.2"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tiktoken-rs = "0.5"
log = "0.4"
futures-util = "0.3.32"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
mockito = "1.4"
